fazendo a parte de pdf

--- a/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
+++ b/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
@@ -8,7 +8,7 @@
         <div class="container">
             <!-- Botão de voltar -->
             <div class="row m-0 justify-content-start mt-4">
-                <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/rh/">
+                <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/rh/apontamentos">
                     <i class="bi-arrow-left fs-3 text-secondary"></i>
                 </a>
             </div>
@@ -19,7 +19,7 @@
             <div class="row m-0 mt-4 justify-content-center">
                 <!-- Botão relatório -->
                 <div class="col-6 px-2 p-0 m-0">
-                  <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/rh/relatorio">
+                  <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/rh/faltas-rel">
                     <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Relatório</h5>
                   </a>
                 </div>
@@ -31,40 +31,26 @@
                 </div>
             </div>
           <form [formGroup]="apontForm" (ngSubmit)="submitForm(apontForm.value)" class="row">
-              <div class="row m-0 my-5 text-custom-dark justify-content-center">
-                <div class="col-6 row">
-                    <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
-                        <i class="button-modal bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarColaborador"></i>
+              <div class="row m-0 mt-5 text-custom-dark justify-content-center">
+                <div class="col form-floating m-1 row">
+                    <div class="col-1 px-0 m-0 text-center">
+                        <i class="button-modal d-flex align-items-center bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarColaborador"></i>
                     </div>
-                    <div class="col-11 px-2 p-0 m-0 position-relative">
-                      <input formControlName="colaborador" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Colaborador">
+                    <div class="col px-2 p-0 m-0 form-floating">
+                      <input formControlName="colaborador" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="cargo" readonly>
+                      <label class="ms-2 small text-truncate text-custom-dark">Colaborador</label>
                     </div>
                 </div>
-                <div class="col-6">
-                  <div class="col-12 px-2 p-0 m-0 form-floating">
-                    <select formControlName="cargo"
-                    class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                    placeholder="Necessidade especial">
-                    <option value="" disabled selected>Cargo</option>
-                    <option value="Cargo 1">Cargo 1</option>
-                    <option value="Cargo 2">Cargo 2</option>
-                    </select>
+                <div class="col form-floating m-1">
+                    <input formControlName="cargo" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Cargo" readonly>
                     <label class="ms-2 small text-truncate text-custom-dark">Cargo</label>
-                  </div>
                 </div> 
               </div>
-              <!-- Tabela -->
-              <div class="row m-0 mt-3 text-custom-dark justify-content-center" >
-                <div class="col-6 row">
-                  <label class="col-1 px-0 m-0 text-center d-flex align-items-center" for="add-falta">
-                    <i class="bi bi-calendar icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer"></i>
-                  </label>
-                  <div class="col-11 px-2 p-0 m-0 position-relative">
-                    <input formControlName="data" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" id="add-falta" name="add-falta">
-                  </div>
+              <div class="row m-0 mt-5 text-custom-dark justify-content-center">
+                <div class="col m-1 row form-floating">
+                  <input formControlName="data" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" id="add-falta" name="add-falta">
                 </div>
-                <div class="col-6 row">
-                  <div class="col-11 px-2 p-0 m-0 form-floating">
+                <div class="col m-1 row form-floating">
                     <select formControlName="tipo"
                     class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                     placeholder="Necessidade especial">
@@ -73,33 +59,83 @@
                     <option value="Não Justificada">Não Justificada</option>
                   </select>
                   <label class="ms-2 small text-truncate text-custom-dark">Tipo de falta</label>
+              </div>
+              <div class="row m-0 mt-5 text-custom-dark justify-content-center">
+                <div class="col m-1 row form-floating">
+                  <select formControlName="periodo"
+                    class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                    placeholder="Necessidade especial">
+                    <option value="" disabled selected>Período de falta</option>
+                    <option value="horas">Horas</option>
+                    <option value="dias">Dias</option>
+                  </select>
+                  <label class="ms-2 small text-truncate text-custom-dark">Tipo de falta</label>
+                </div>
+                <div class="col m-1 row form-floating">
+                  <input formControlName="tempo" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="number" placeholder="Colaborador" >
+                  <label class="ms-2 small text-truncate text-custom-dark">Tempo de falta</label>
+                </div>
+               
+              </div>
+
+              <div class="row m-0 mt-3 text-custom-dark justify-content-center">
+                <div class="col m-1 form-floating row">
+                  <input formControlName="diasAtestado" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="number" placeholder="Colaborador" >
+                  <label class="ms-2 small text-truncate text-custom-dark">Dias de atestado</label>
+                </div>
+                <div class="col m-1 form-floating row">
+                  <select formControlName="atestado"
+                    class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                    placeholder="Necessidade especial">
+                    <option value="" disabled selected>Tipo de atestado</option>
+                    <option value="Justificado"> Justificado</option>
+                    <option value="Não justificado">Não justificado</option>
+                  </select>
+                  <label class="ms-2 small text-truncate text-custom-dark">Tipo de atestado</label>
                 </div>
                 <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
                   <button type="submit" class="submit-buton h-100 w-100 border border-0 bg-trasnparent" cursor="pointer">
-                    <i class="submit-buton button-modal bi bi-check-circle-fill icon-view my-auto fs-3 h-100 w-100 p-2 m-0 fw-bold text-green"></i>
+                    <i class="submit-buton button-modal bi bi-check-circle-fill icon-view my-auto fs-3 h-100 w-100 p-2 m-0 fw-bold"></i>
                   </button>
                 </div>
+
               </div>
+
+
             </div>
           </form>
           <div class="tabela col-12 mt-4">
             <table class="col-12">
                 <thead class="col-12">
                     <tr>
-                      <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
-                      <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
-                      <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
-                      <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Período</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tempo</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Dias (atestado)</td>
+                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Atestado</td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let oneColab of colab">
-                      <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.colaborador}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.cargo}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.data.substring(10, 0)}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.tipo}}</td>
-                      <td class="lead text-custom-dark text-center fw-normal">
-                      <i class="w-100 h-100 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(oneColab.id)"></i>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.colaborador}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.cargo}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.data.substring(10, 0)}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.tipo}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.periodo}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.tempo}}</td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                        <p class="w-100 h-100 text-center m-0" *ngIf="oneColab.diasAtestado==''">-</p>
+                        <p class="w-100 h-100 m-0" *ngIf="oneColab.diasAtestado!=''">{{oneColab.diasAtestado}}</p>
+                      </td>
+                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                        <p class="w-100 h-100 text-center m-0" *ngIf="oneColab.atestado==''">-</p>
+                        <p class="w-100 h-100 m-0" *ngIf="oneColab.atestado!=''">{{oneColab.atestado}}</p>
+                      </td>
+                      <td class="lead text-custom-dark fw-normal">
+                        <i class="w-100 h-100 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(oneColab.id)"></i>
                       </td>
                     </tr>
                 </tbody>
