--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -34,6 +34,9 @@
             <li class="nav-item px-1">
               <a class="nav-link px-4" [class.active]="estoqueSection == 'uniforme'" (click)="toggleEstoqueSection('uniforme')">Uniforme/epi</a>
             </li>
+            <li class="nav-item px-1">
+              <a class="nav-link px-4" [class.active]="estoqueSection == 'anexos'" (click)="toggleEstoqueSection('anexos')">Anexos</a>
+            </li>
           </ul>
           <div class="col-12 pb-4 d-flex border-bottom align-items-end justify-content-end">
             <label class="form-check-label me-3 fs-5" for="desativado">{{ (desativadoCheckbox === true) ? 'Ativo' :
@@ -50,7 +53,7 @@
         <h1 class="text-custom-dark text-truncate">{{ rhForm.value.name }}  {{ rhForm.value.surname }}</h1>
       </div>
 
-      <form [formGroup]="rhForm" (ngSubmit)="sendForm(rhForm.value, rhForm)">
+      <form [formGroup]="rhForm" (ngSubmit)="sendForm(rhForm.value)">
         <div *ngIf="estoqueSection == 'dados-pessoais'">
           <!-- Formulário -->
               <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
@@ -116,12 +119,20 @@
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF/CNPJ</label>
                 </div>
 
+                
                 <!-- CNH -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                    <input maxlength="11" formControlName="cnh" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"  type="text" placeholder="CNH">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNH</label>
+                  <input maxlength="11" formControlName="cnh" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"  type="text" placeholder="CNH">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNH</label>
                 </div>
-
+                
+                <!-- PIS -->
+                <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                  <input formControlName="pis" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
+                  type="text" placeholder="PIS">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">PIS</label>
+                </div>
+                
                 <!-- Gênero -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <select formControlName="gender"
@@ -152,11 +163,12 @@
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <select #pcd (change)="log(pcd.value)"
                     class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                    placeholder="Necessidade especial" >
+                    placeholder="Necessidade especial" formControlName="pcd" >
                     <option value="" disabled selected>Pessoa com deficiência?</option>
                     <option value="Sim">Sim</option>
                     <option value="Nao">Não</option>
                     </select>
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Pessoa com deficiência?</label>
                 </div>
                 <!--  -->
 
@@ -315,7 +327,7 @@
         <div *ngIf="estoqueSection == 'setor'">
           <!-- Departamento -->
           <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
-            <div class="col-6 px-2 pt-4 p-0 m-0">
+            <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
                 <select formControlName="department"
                 class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                 placeholder="Departamento">
@@ -327,6 +339,7 @@
                 <option value="Estoque">Estoque</option>
                 <option value="Controladoria/Diretoria">Controladoria/Diretoria</option>
                 </select>
+                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Departamento</label>
             </div>
 
             <!-- Cargo -->
@@ -377,13 +390,6 @@
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
                 placeholder="Data da demissão">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da demissão</label>
-            </div>
-
-            <!-- PIS -->
-            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                <input formControlName="pis" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
-                type="text" placeholder="PIS">
-                <label class="ms-2 mt-3 small text-truncate text-custom-dark">PIS</label>
             </div>
             
             <!-- Vencimento de Férias -->
@@ -464,13 +470,6 @@
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Dupla Função</label>
             </div>
 
-          <!-- Dias trabalhados -->
-           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input formControlName="workDays"
-              class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
-              placeholder="Dias trabalhados">
-            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Dias trabalhados</label>
-          </div>
 
             <!-- Vale Transporte -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -478,60 +477,93 @@
                 class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                 placeholder="Vale Transporte" >
                 <option value="" disabled selected>Vale Transporte (VT)?</option>
-                <option value="sim">Sim</option>
-                <option value="nao">Não</option>
+                <option value="Sim">Sim</option>
+                <option value="Não">Não</option>
               </select>
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Vale Transporte (VT)?</label>
             </div>
 
             <!-- Valor da condução -->
-            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <div *ngIf="vt.value === 'Sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input formControlName="conducaoIda"
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
                 placeholder="Valor da condução ida">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor da condução(ida)</label>
             </div>
 
-            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <div *ngIf="vt.value === 'Sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input formControlName="conducaoVolta"
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
                 placeholder="Valor da condução volta">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor da condução(volta)</label>
             </div>
 
-            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <div *ngIf="vt.value === 'Sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input formControlName="linesNames"
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
                 placeholder="Nome das linhas de transporte">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome das linhas de transporte</label>
             </div>
 
-            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <div *ngIf="vt.value === 'Sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input formControlName="totalValue"
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
                 placeholder="Valor total" readonly>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor total</label>
             </div>
+
+            <!-- Pix -->
+            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input formControlName="pix"
+              class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+              placeholder="Pix">
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Pix</label>
+            </div>
           </div>    
         </div>
 
         <div *ngIf="estoqueSection == 'exames'">
-          <!-- Ultimo exame -->
-          <div class="row m-0 mt-4 justify-content-center rh-form">
-            <div class="col-4 px-2 pt-4 p-2 mb-2 form-floating">
-                <input formControlName="lastExam"
-                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
-                placeholder="Conta">
-                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultimo exame</label>
-            </div>
+          <div class="col-12 d-flex justify-content-center">
+            <h3 class="text-custom-dark text-center p-2">Exame</h3>
+            <i class="button-modal bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" (click)="exameAdd()"></i>
+          </div>
+          <div class="col-12" *ngFor="let exame of exame['controls']; let i = index" formArrayName="exame">
+            <div class="col-12 d-flex justify-content-center" [formGroupName]="i">
+          
+              <div class="col px-2 pt-4 p-2 mb-2 form-floating">
+                <input formControlName="data"
+                  class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
+                  placeholder="Conta">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Último exame</label>
+              </div>
+  
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                <select
+                class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                placeholder="Tipo do ultimo exame" formControlName="tipo">
+                  <option value="Exame médico">Exame médico</option>
+                  <option value="Admissional">Admissional</option>
+                  <option value="Demissional">Demissional</option>
+                  <option value="Periódico">Periódico</option>
+                </select>
+                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tipo de exame</label>
+              </div>
 
-            <!-- Próximo exame -->
-            <div class="col-4 px-2 pt-4 p-2 mb-2 form-floating">
-                <input formControlName="nextExam"
-                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
-                placeholder="Conta">
-                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Próximo exame</label>
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                <input formControlName="vencimento"
+                  class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
+                  placeholder="Conta">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Vencimento</label>
+              </div>
+              
+              <div class="col-1 row">
+                <i class="display-6 d-flex align-items-center w-100 h-100 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="deleteExame(i)"></i>
+              </div>
+
             </div>
           </div>
+
+          
         </div>
 
         <div *ngIf="estoqueSection == 'uniforme'">
@@ -632,7 +664,7 @@
                         <option value="G">G</option>
                         <option value="GG">GG</option>
                       </select>
-                      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho do cinto</label>
+                      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho do cinta</label>
                     </div>
         
                     <!-- Ultima entrega -->
@@ -640,7 +672,7 @@
                     <input formControlName="lastDeliveryBelt"
                       class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
                       placeholder="Ultima entrega">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (cinto)</label>
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (cinta)</label>
                    </div>
         
                   </div>
@@ -694,8 +726,59 @@
                    </div>
         
                 </div>
+
+                <div class="col-12 d-flex justify-content-center">
+        
+                  <!-- Tamanho do jaqueta -->
+                  <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                    <select
+                    class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                    placeholder="Tamnho do abafador" formControlName="abafador" #abafador (change)="log(abafador.value)">
+                      <option value="sim">Sim</option>
+                      <option value="não">Não</option>
+                    </select>
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Abafador de ruído?</label>
+                  </div>
+      
+                  <!-- Ultima entrega -->
+                 <div *ngIf="abafador.value=='sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                  <input formControlName="lastDeliveryAbafador"
+                    class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
+                    placeholder="Ultima entrega">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (Abafador de ruído)</label>
+                 </div>
+      
+              </div>
             </div>
         </div>
+        <div *ngIf="estoqueSection == 'anexos'">
+          <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
+              <div class="col-12 d-flex justify-content-center">
+                <div class="row m-0 mt-2">
+
+                  <div class="col-12 px-2 pt-4 p-0 m-0 form-floating d-flex flex-column justify-content-between">
+                    <a *ngFor="let anex of anexes" [href]="anexesRepo + anex.fileName" target="_blank"
+                      class="my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning h-100 d-flex justify-content-between shadow-sm w-100">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Anexo: {{ anex.date | date}} Download</h5>
+                      <div class="d-flex">
+                        <i (click)="deleteAnex($event, anex)" class="bi-trash-fill my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                        <i class="bi-cloud-download-fill px-4 my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                      </div>
+                    </a>
+                    <button
+                      class="my-3 btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm w-100"
+                      type="button" (click)="newFile.click()">
+                      <input type="file" (change)="addFile($event)" #newFile style="display: none;">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar Arquivo</h5>
+                      <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                    </button>
+                  </div>
+        
+                </div>
+        
+              </div>
+          </div>
+      </div>
         <div class="row m-0 mt-4 justify-content-end">
 
           <!-- Botão Salvar -->
