parte de rh finalizada

--- a/src/app/sistema/rh/apont-faltas/apont-faltas.component.scss
+++ b/src/app/sistema/rh/apont-faltas/apont-faltas.component.scss
@@ -1,6 +1,6 @@
-.submit-buton{
+i.submit-buton{
     background: transparent;
 }
-.submit-buton:hover{
+i.submit-buton:hover{
     background: transparent;
 }
