--- a/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
@@ -394,7 +394,7 @@
               <option value="" disabled selected>Cargo</option>
               <option *ngFor="let cargo of selectCargos" value="{{cargo.nome}}">{{cargo.nome}}</option>
               </select>
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Departamento</label>
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cargo</label>
               <i class="button-modal d-flex align-items-center bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" data-bs-toggle="modal" data-bs-target="#addCargo"></i>
             </div>
 
