--- a/src/app/sistema/rh/relatorio/relatorio.component.html
+++ b/src/app/sistema/rh/relatorio/relatorio.component.html
@@ -91,7 +91,7 @@
                     <button class="m-1 col px-0 m-0 pdf-button rounded text-white text-center border-0" for="add-falta">
                         <i class="bi bi-file-earmark-pdf-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark text-white" cursor="pointer" data-bs-toggle="modal" data-bs-target="#generatePdf"></i>
                     </button>
-                    <button class="m-1 col px-0 m-0 excel-button rounded text-center border-0" for="add-falta">
+                    <button class="m-1 col px-0 m-0 excel-button rounded text-center border-0" for="add-falta" (click)="exportexcel()">
                         <i class="bi bi-file-excel icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark text-white" cursor="pointer"></i>
                     </button>
                 </div>
